# pang

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  build.zig  config.status  config.sub  configure  configure.ac  configure.in  cross-configure.sh  cross-make.sh  cross-strip.sh
src/: DCSoundEngine.c  DCSoundEngine.h  Makefile  Makefile.am  Makefile.in  Makefile.win  PCGfxEngine.c  PCGfxEngine.h  PCSoundEngine.c  PCSoundEngine.h  SDL_collide.c  SDL_collide.h  actions.c  ball.c  ball.h  bonus.c  bonus.h  collisions.c  collisions.h  docGfxEngine.txt  elf2bin.sh  events.c  events.h  gfx.c  gfx.h  ladder.c  ladder.h  levels.c  levels.h  main.c  main.h  makefile.dc  objects.c  objects.h  objets.c  objets.h  plateforme.c  plateforme.h  platform.c  platform.h  (+12 more)
src/romdisk/: game_over.opus  in_game.opus  next_level.opus
