# $Id$

DISTCLEANFILES = *~ *.~* *.exe

bin_PROGRAMS = ppang

ppang_SOURCES = \
actions.c \
ball.c \
bonus.c \
collisions.c \
DCSoundEngine.c \
ladder.c \
levels.c \
main.c \
objets.c \
PCGfxEngine.c \
PCSoundEngine.c \
plateforme.c \
player.c \
SDL_collide.c \
shoot.c \
structures.c

ppang_LDADD = -lSDL_mixer -lsmpeg -lmikmod -lSDL_image -lpng -ljpeg -lz -lSDL_gfx -lm -lgcc -lstdc++ -lpthread
